--- a/gressgraph/index.html
+++ b/gressgraph/index.html
@@ -31,7 +31,7 @@
   <ul id="nav">
     <li><a href="gressgraph-0.2.tar.gz">Download</a> (source, 168KB)</li>
     <li><a href="gressgraph.pdf">Documentation</a> (PDF, 9 pages)</li>
-    <li><a href="gressgraph-example.png">Screenshot</a> (PNG, 63KB)</li>
+    <li><a href="gressgraph-example.png">Screenshot</a> (PNG, 1000x964)</li>
   </ul>
 
   <p style="clear: left">gressgraph produces a graph of your iptables ruleset using <a href="http://graphviz.org/">Graphviz</a>. You can use the graph to:
