Moving emacs to the top and fixing invalid HTML.
darcs-hash:20090225065840-0a35a-f14198c03978f2ba31461245082232630859e207.gz

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
   <h2>Programs</h2>
   <ul>
-    <li><a href="gressgraph/">gressgraph</a>&mdash;visualize your firewall.</a></li>
+    <li>My documented <a href="emacs/dot-emacs.pdf"><tt>.emacs</tt></a> (32 pages). (and the <a href="emacs/dot-emacs.tar.gz">source</a>)</li>
+    <li><a href="gressgraph/">gressgraph</a>&mdash;visualize your firewall.</li>
     <li><a href="xtee/">xtee</a>&mdash;<q>cross tee</q>/<q>expanded tee</q> (fun with pipes).</li>
-    <li>My documented <a href="emacs/dot-emacs.pdf"><tt>.emacs</tt></a> (32 pages). (and the <a href="emacs/dot-emacs.tar.gz">source</a>)
   </ul>
   <h2>Old Programs</h2>
   <ul>
-    <li><a href="Gt/">Gt</a>&mdash;the <q>Game toolkit</q> (modelled after <a href="http://en.wikipedia.org/wiki/Intrinsics">Xt</a>).</a></li>
+    <li><a href="Gt/">Gt</a>&mdash;the <q>Game toolkit</q> (modelled after <a href="http://en.wikipedia.org/wiki/Intrinsics">Xt</a>).</li>
     <li><a href="rubirc/">rubIRC</a>&mdash;an IRC client, written and scriptable in Ruby.</li>
     <li><a href="batchid3v2/">batchid3v2</a>&mdash;a platform-neutral id3v2.4.0 audio file tagger/renamer.</li>
   </ul>
