improvements for Google
 * Added longer meta descriptions based on Google Webmaster Tools suggestion.
 * Re-adding the google verification file (it seems to check for it regularly).

darcs-hash:20090225071213-0a35a-d1fd10aaff363b4e5876b98d6467be0511ff46ca.gz

--- a/gressgraph/index.html
+++ b/gressgraph/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-  <meta name="description" content="gressgraph - visualize your iptables firewall">
+  <meta name="description" content="gressgraph - visualize your iptables firewall. gressgraph is a small literate Haskell program that uses Graphviz to produce a visual graph of your iptables settings.">
   <meta name="keywords" content="gressgraph, iptables, firewall, graph, graphviz, haskell">
   <title>gressgraph - visualize your iptables firewall</title>
   <style type="text/css">
