adding Google Analytics tags
darcs-hash:20090426053908-0a35a-1aaec180560f56a26edcfb76c1666a3b048da263.gz

--- a/Gt/index.html
+++ b/Gt/index.html
@@ -34,5 +34,14 @@ View Gt design documentation <a href="design/">here</a>.</p>
 <p>All diagrams were created with <a href="http://www.lysator.liu.se/~alla/dia/">Dia</a>.  jcore will be working on a large batch of diagrams for Gt 0.2 to aid in development, and you can expect those to give a much more mature and broad view.</p>
 <p class="footer">Last updated June 10, 2001 jcore<br>
 Copyright 2001, 2008 <a href="/">Chris Forno (jekor)</a></p>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-73938-3");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 </body>
 </html>
