--- a/batchid3v2/index.html
+++ b/batchid3v2/index.html
@@ -112,6 +112,15 @@ Notes: Blank lines are ignored but whitespace is important. There's currently a
 256 character limit on the lines in the file, if you need to change this edit
 LINE_SIZE.
 </pre></p>
-  <p id="footer">Copyright 2008 <a href="/">Chris Forno (jekor)</a></p>
+  <p id="footer">Copyright 2008&endash;2009 <a href="/">Chris Forno (jekor)</a></p>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-73938-3");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 </body>
 </html>
