--- a/rubirc/index.html
+++ b/rubirc/index.html
@@ -25,6 +25,15 @@
   <p>rubIRC is an IRC client, written and scriptable in Ruby. It runs on Linux (GTK+) and Windows (FOX).</p>
   <p>rubIRC was written specifically for scripters. Its philosophy is that a scripting environment is only sufficiently powerful when the client itself can be written in it. To this end, rubIRC is divided into some basic components upon which the <q>main</q> script runs.</p>
   <p>Note that I haven't worked on rubIRC since 2001, so it may not even run!</p>
-  <p id="footer">Copyright 2008 <a href="/">Chris Forno (jekor)</a></p>
+  <p id="footer">Copyright 2008&endash;2009 <a href="/">Chris Forno (jekor)</a></p>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-73938-3");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 </body>
 </html>
