--- a/index.html
+++ b/index.html
@@ -28,5 +28,14 @@
     <li><a href="resume-Chris-Forno.pdf">resume</a></li>
   </ul>
   <p id="footer">Copyright 2008, 2009 Chris Forno (jekor)</p>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-73938-3");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 </body>
 </html>
