--- a/gressgraph/index.html
+++ b/gressgraph/index.html
@@ -56,7 +56,7 @@
 
   <p style="margin-left: 2em"><code><a href="http://www.darcs.net/">darcs</a> get http://jekor.com/gressgraph/</code></p>
 
-  <p id="footer">Copyright 2008&endash;2009 <a href="/">Chris Forno (jekor)</a></p>
+  <p id="footer">Copyright 2008 <a href="mailto:jekor@jekor.com">Chris Forno</a></p>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
