adding margins for prettification on program pages
Ignore-this: ee1eacb9b5ce826b57a995ab64f3a70e

darcs-hash:20091002064804-c4631-490cb857701bdbf47a8d3ed3462f848833cf98f5.gz

--- a/xtee/index.html
+++ b/xtee/index.html
@@ -7,6 +7,9 @@
   <style type="text/css">
     body {
       background-color: white;
+      width: 66em;
+      margin-left: auto;
+      margin-right: auto;
     }
     h1 {
       background: url(xtee.png) top no-repeat;
@@ -52,7 +55,7 @@ instead of copying stdin to stdout, it copies a file to stdout.</p>
 
   <p style="margin-left: 2em"><code><a href="http://www.darcs.net/">darcs</a> get http://jekor.com/xtee/</code></p>
 
-  <p id="footer">Copyright 2008 <a href="mailto:jekor@jekor.com">Chris Forno</a></p>
+  <p id="footer">Copyright 2008, 2009 <a href="mailto:jekor@jekor.com">Chris Forno</a></p>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
