--- a/gressgraph/index.html
+++ b/gressgraph/index.html
@@ -6,8 +6,11 @@
   <title>gressgraph - visualize your iptables firewall</title>
   <style type="text/css">
     body {
-      background: url(gressgraph-header.png) top left no-repeat;
+      background: url(gressgraph-header.png) top center no-repeat;
       background-color: #808080;
+      width: 66em;
+      margin-left: auto;
+      margin-right: auto;
     }
     #nav {
       padding: 0.5em 0;
@@ -104,7 +107,7 @@ Chain OUTPUT (policy DROP 3466 packets, 161804 bytes)
 
   <p style="margin-left: 2em"><code><a href="http://www.darcs.net/">darcs</a> get http://jekor.com/gressgraph/</code></p>
 
-  <p id="footer">Copyright 2008 <a href="mailto:jekor@jekor.com">Chris Forno</a></p>
+  <p id="footer">Copyright 2008, 2009 <a href="mailto:jekor@jekor.com">Chris Forno</a></p>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
