adding chartviz to the front page
Ignore-this: 3272b1a1f391ff83322a5ed5bf3bc1de

darcs-hash:20091028080013-c4631-c0e0e0a924ce89ce4e9e24579a0f71d8a406a461.gz

--- a/chartviz/index.html
+++ b/chartviz/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="description" content="chartviz is a javascript charting and visualization library that uses non-flash vector graphics">
   <meta name="keywords" content="chartviz, javascript, chart, visualization, library, vector graphics, SVG, VML, raphael">
-  <title>Chartviz - Javascript Charting Visualization Library</title>
+  <title>Chartviz - Javascript Charting Library</title>
   <style type="text/css">
     body {
       background-color: white;
