--- a/chartviz/index.html
+++ b/chartviz/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta name="description" content="chartviz is a javascript charting and visualization library that uses non-flash vector graphics">
   <meta name="keywords" content="chartviz, javascript, chart, visualization, library, vector graphics, SVG, VML, raphael">
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
   <title>Chartviz - Javascript Charting Library</title>
   <style type="text/css">
     body {
