moving to TemplatePG + misc updates
Ignore-this: 3c52e512d4d993691a06cfa3e9b0d00e

darcs-hash:20110227090425-c4631-510b22e84c965b875e71a20efc73c2471e398ff9.gz

--- a/chartviz/index.html
+++ b/chartviz/index.html
@@ -4,7 +4,7 @@
   <meta name="description" content="chartviz is a javascript charting and visualization library that uses non-flash vector graphics">
   <meta name="keywords" content="chartviz, javascript, chart, visualization, library, vector graphics, SVG, VML, raphael">
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-  <title>Chartviz - Javascript Charting Library</title>
+  <title>Chartviz - JavaScript Charting Library</title>
   <style type="text/css">
     body {
       background-color: white;
@@ -46,7 +46,7 @@
     <li><a href="chartviz.min.js.gz">Minified Gzipped Source</a> (2K)</li>
   </ul>
 
-  <p>Chartviz is a javascript library for charting and visualizing data. It is heavily inspired by Google Analytics. Unlike Google Analytics, it does not depend on Adobe Flash. Instead, it uses SVG or VML through the <a href="http://raphaeljs.com/">Raphaël</a> library.</p>
+  <p>Chartviz is a JavaScript charting library. It is heavily inspired by Google Analytics. Unlike Google Analytics, it does not depend on Adobe Flash. Instead, it uses SVG or VML through the <a href="http://raphaeljs.com/">Raphaël</a> library.</p>
 
   <p>To see how to use chartviz, view the source of this page. There is minimal documentation in the form of comments in the source file.</p>
 
@@ -101,6 +101,8 @@
   </script>
 
   <p>The time series is currently the only visualization supported. For now, it handles positive integer values only.</p>
+
+  <p>The latest source is available on <a href="https://github.com/jekor/chartviz">github</a>.</p>
 
   <script src="raphael.min.js"></script>
   <script src="chartviz.min.js"></script>
