--- a/log2rotate/index.html
+++ b/log2rotate/index.html
@@ -170,6 +170,8 @@
     </tbody>
   </table>
 
+  <p>The latest source is available on <a href="https://github.com/jekor/log2rotate">github</a>.</p>
+
   <p id="footer">Copyright 2009 <a href="mailto:jekor@jekor.com">Chris Forno</a></p>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
