--- a/xtee/index.html
+++ b/xtee/index.html
@@ -49,11 +49,7 @@ instead of copying stdin to stdout, it copies a file to stdout.</p>
 
   <p>See the README file in the download for how to contact me, as well as instructions on how to build the program. See the COPYING file for license information (GPLv3).</p>
 
-  <h2>Latest Source</h2>
-
-  <p>You can checkout a copy of the latest code with:</p>
-
-  <p style="margin-left: 2em"><code><a href="http://www.darcs.net/">darcs</a> get http://jekor.com/xtee/</code></p>
+  <p>The latest source is available on <a href="https://github.com/jekor/xtee">github</a>.</p>
 
   <p id="footer">Copyright 2008, 2009 <a href="mailto:jekor@jekor.com">Chris Forno</a></p>
 <script type="text/javascript">
